# cq

./: .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci-python-sdk.yaml  ci-server.yaml  release-go-cli.yaml
cli/: .gitignore  .goreleaser.yaml  NOTICE  go.mod  go.sum
cli/cmd/: query.go  query_test.go
cli/mcpserver/: e2e_test.go  query.go  query_test.go
docs/: CRAIC-Proposal.md
docs/plans/: 2026-03-04-craic-mvp-poc-design.md  2026-04-10-postgresql-backend-design.md
plugins/cq/: pyproject.toml
plugins/cq/.claude-plugin/: plugin.json
plugins/cq/commands/: cq-status.md
plugins/cq/scripts/: bootstrap.json  bootstrap.py  cq_binary.py
plugins/cq/skills/cq/: SKILL.md
plugins/cq/tests/: test_bootstrap.py  test_cq_binary.py
scripts/: lint-frontend.sh
sdk/go/: client.go  client_test.go  query_options.go  query_options_test.go  remote.go  remote_test.go  scoring.go  scoring_test.go  store.go  (+1 more)
server/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  ruff.toml
server/backend/alembic/: env.py
server/backend/alembic/versions/: 0001_baseline.py
server/backend/src/cq_server/: app.py  auth.py  db_url.py  knowledge_unit.py  migrations.py  review.py  scoring.py  store.py  tables.py
server/backend/src/cq_server/store/: __init__.py  _protocol.py  _queries.py  _sqlite.py
server/backend/tests/: db_helpers.py  test_app.py  test_auth.py  test_db_url.py  test_migrations.py  test_queries.py  test_review.py  test_scoring.py  test_sqlite_store.py  test_store.py  test_store_factory.py  test_store_protocol.py
(+39 files in other folders)
