[project]
name = "cq-plugin"
version = "0.7.3"
description = "cq Plugin for coding agents (e.g. Claude Code, OpenCode) - shared agent knowledge commons"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "tests" },
]

lint = [
    "pre-commit>=4.5.1",
]

tests = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
