[build-system]
requires = ["setuptools>=48"]
build-backend = "setuptools.build_meta"

[project]
name = "cq-server"
version = "0.0.0.dev0"
description = "cq team knowledge store server"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pyjwt>=2.0",
    "bcrypt>=4.0",
    "cq-sdk~=0.3.0",
]

[project.scripts]
cq-server = "cq_server.app:main"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "tests" },
]

lint = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
]

tests = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

# Dynamic versioning via setuptools_scm is configured in the release
# workflow. The tag pattern is server/X.Y.Z. During development,
# the static version above is used.
# [tool.setuptools_scm]
# root = "../.."
# tag_regex = "^server/(?P<version>.+)$"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
